Labs/internal-ingress.yaml
#ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todoapp
  labels:
    app: todoapp
spec:
  containers:
  - image: "acrcontainersworkshop.azurecr.io/todoapp:v1"
    name: todoapp-image
    ports:
    - containerPort: 80
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: todoapp
spec:
  selector:
    app: todoapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: todoapp
            port:
              number: 80
        pathType: Exact
